[project]
name = "spike-ldm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.3",
    "deepspeed>=0.18.8",
    "mpi4py>=4.1.1",
    "peft>=0.18.1",
    "protobuf>=7.34.1",
    "python-dotenv>=1.2.2",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "trl>=0.29.1",
]

[tool.ruff.lint]
select = ["I"]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
